# paperai

./: .copier-answers.yml  .pre-commit-config.yaml  CITATION.cff  README.md  README.rst  noxfile.py  pyproject.toml  setup.py  tasks.py
.github.wait/workflows/: test-and-publish.yaml
.github/workflows/: test-and-publish.yaml
docs_src/: conf.py  index.rst
examples/: README.rst  search.py
paperai/: __init__.py  __main__.py  api.py  cli.py  export.py  highlights.py  index.py  models.py  query.py  query_api.py  shell.py  utils.py  vectors.py
paperai/report/: __init__.py  __main__.py  annotate.py  common.py  csvr.py  execute.py  markdown.py  task.py
tests/: __init__.py  _profile.py  test_api.py  test_cli.py  test_export.py  test_index.py  test_models.py  test_query.py  test_report.py  test_shell.py  test_vectors.py  utils.py
