[tool.poetry]
name = "paperai"
version = "1.11.0"
description = "AI-powered literature discovery and review engine for medical/scientific papers"
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/paperai"
repository = "https://github.com/nialov/paperai"
documentation = "https://paperai.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS"
]
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
paperai = "paperai.cli:app"

[tool.poetry.dependencies]
python = "^3.8"

html2markdown = "^0.1.7"
mdv3 = "^2.0.1"
networkx = "^2.4"
PyYAML = "^5.3"
regex = "^2020.5.14"
txtai = {version = "^3.4.0", extras = ["api", "similarity"]}
txtmarker = "^1.0.0"
nltk = "3.6.2"
typer = "^0.4.0"
beartype = "^0.9.0"
nialog = "^0.0.1"
rich = "^10.12.0"
fastapi = {extras = ["all"], version = "^0.70.0"}
# Extras
# Coverage
coverage = {version = "^5.0", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx-gallery = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}

# Linting and formatting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
black = {version = "*", optional = true}
black-nb = {version = "*", optional = true}
blacken-docs = {version = "*", optional = true}
blackdoc = {version = "*", optional = true}
isort = {version = "*", optional = true}

# Typecheck
mypy = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
nox = "*"
invoke = "*"
jupyterlab = "*"
ipython = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.extras]
coverage = ["coverage", "coverage-badge"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-autodoc-typehints"
]
format-lint = [
    "pylint",
    "rstcheck",
    "sphinx",
    "black",
    "black-nb",
    "isort",
    "blacken-docs",
    "blackdoc"
]
typecheck = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "*/__init__.py",
    "*/__version__.py",
    "*/_version.py",
    "./CITATION.cff",
]
patterns = [
    "(^__version__\\s*=\\s*['\"])[^'\"]*(['\"])",
    "(^version:\\s*['\"])[^'\"]*(['\"])",
]

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "paperai",
    ]
addopts = "--doctest-modules --pdbcls=IPython.terminal.debugger:Pdb"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["paperai", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 90
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
